test/parsing/test-parse-error-with-preamble.ipg
Junk

%preamble_end

S -> for i = 1 to 10 do A;
